<resources>
    <string name="app_name">D+Eu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="casa_de_apoio">Casa de Apoio</string>
    <string name="telefones">Telefones</string>
    <string name="email">Email</string>
    <string name="info">Informações</string>
    <string name="settings">Configurações</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="inss0">
        O INSS (Instituto Nacional do Seguro Social) é uma autarquia federal no Brasil vinculada
        ao Ministério da Economia. Ele gerencia o sistema previdenciário do país, concedendo
        benefícios como aposentadorias, pensões, auxílio-doença e salário-maternidade.
    </string>
    <string name="inss1">
        O INSS (Instituto Nacional do Seguro Social) é uma autarquia federal brasileira responsável
        pela administração e concessão de benefícios da Previdência Social no país. Fundado em 1990,
        o INSS é vinculado ao Ministério da Economia e desempenha um papel crucial na gestão dos sistemas
        de aposentadorias, pensões, auxílios e outros benefícios previdenciários.
    </string>
    <string name="inss2">
        O sistema previdenciário passou por reformas ao longo dos anos, e as regras para benefícios podem
        variar conforme a legislação vigente.
    </string>
    <string name="inss3">
        Abrange diversas modalidades de benefícios previdenciários,
        cada um destinado a situações específicas. Algumas das principais modalidades incluem:
    </string>

    <string name="tmo1">
        O transplante de células-tronco hematopoéticas (TCTH) é um procedimento médico que envolve a substituição
        ou regeneração das células-tronco hematopoéticas do paciente, localizadas na medula óssea, por meio da infusão
        de células-tronco sadias provenientes de um doador compatível. Essas células-tronco são as precursoras das células
        do sangue, como glóbulos brancos, glóbulos vermelhos e plaquetas.
    </string>

    <string name="tmo2">
        O procedimento de TCTH envolve diferentes etapas. Inicialmente, a medula óssea do paciente é destruída ou suprimida
        por meio de quimioterapia, radioterapia ou ambos. Posteriormente, as células-tronco saudáveis do doador, compatíveis
        com o paciente, são infundidas, migrando para a medula óssea e iniciando a produção de células sanguíneas normais.
        O transplante pode ser autólogo, utilizando as próprias células-tronco do paciente, ou alogênico, envolvendo um doador compatível.
    </string>

</resources>